--- a/app/templates/roulette/play.html
+++ b/app/templates/roulette/play.html
@@ -13,8 +13,9 @@
             <div class="pill" id="sessionScore">Score: 0/0</div>
             <a class="pill link" href="/roulette/leaderboard">Leaderboard</a>
         </div>
-        <h1>Three headlines. One is real.</h1>
-        <p class="roulette-subhead"><span id="prompt">Loading...</span> <span id="dateNote"></span></p>
+        <h1 id="prompt">Loading...</h1>
+        <p class="roulette-subhead" id="subhead">Pick the real one.</p>
+        <p class="roulette-date" id="dateNote"></p>
     </div>
 
     <div id="cardsWrap">
